<resources>
    <string name="app_name">aStory</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <!--Add Geofence Dialog Strings-->
    <string name="add_geofence_title">Leave a story</string>
    <string name="add_geofence_name_hint">Title</string>
    <string name="add_geofence_story_hint">What\'s your story?</string>
    <string name="add_geofence_radius_hint">Choose a radius between 15 meters and 100 meters</string>

    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <string name="add_story">Create a story</string>
    <string name="date_filter">Filter by date</string>
    <string name="all_stories">Show all stories</string>
    <string name="profile">View your profile</string>


    <string name="google_client_id">118911688369-8uio598dd6pp6fotdgdp1l40h8e73s96.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1031010426964586</string>
    <!--<string name="gcm_defaultSenderId">118911688369</string>-->
    <!--Display Story Activity Strings-->
    <string name="remove_story">Delete Story</string>
    <string name="comments">Comments</string>
    <string name="upvote">Upvote</string>
    <string name="take_picture">Add Picture</string>
    <string name="add_music">Add Music</string>
    <string name="record_video">Add Video</string>
    <string name="add_media">Multimedia</string>
    <string name="vote_count"></string>
    <string name="generic">Generic</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="mad">Mad</string>
    <string name="surprised">Surprise</string>
    <string name="save">Save Story</string>
    <string name="time_travel">360 Video</string>
    <string name="search_hint">Search Spotify . . .</string>
    <string name="search_title">Song Search</string>
    <string name="track_title">Title</string>
    <string name="track_artist">Artist</string>

    <!--Comment Activity Strings-->
    <string name="send_button">Send</string>
    <string name="comment_hint">Write a comment . . . </string>
    <!--Login Page Strings>-->
    <string name="login_with_google">Login with Google</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>

    <!--Registration Page Strings-->
    <string name="email_hint">storyteller101@mit.edu</string>
    <string name="username_hint">storyteller101</string>
    <string name="password_hint"></string>
    <string name="registration_button">Register</string>

    <!--Map Page Strings-->
    <string name="calendar_button">Calendar</string>
    <string name="all_stories_button">All Stories</string>
    <string name="recent_stories_button">Recent Stories</string>
    <string name="out_of_range">You\'re too far away to view this story. Move closer to access it.
        Click on this window and we\'ll show you how to get there.</string>
    <string name="directions">Get directions to this story</string>

    <!--User Page Strings-->
    <string name="user_page">User</string>
    <string name="profile_story_title">Title</string>
    <string name="profile_story_city">City</string>
    <string name="profile_story_date">Date</string>
</resources>
