<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city_small">
    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google"
        android:text="@string/login_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="aStory"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="35dp"
            android:id="@+id/textView" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:id="@+id/editText"
            android:hint="MIT.EDU"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register_button"
            android:id="@+id/register"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_button"
            android:id="@+id/sign_in"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom" />


    </LinearLayout>


</LinearLayout>